--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "dewebsockify",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Turn websockify websocket endpoint back into a TCP socket",
-  "main": "index.js",
+  "main": "dewebsockify.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chantzish/dewebsockify.git"
   },
   "author": "",
   "license": "MIT",
   "bin": "./dewebsockify.js",
+  "bugs": {
+    "url": "https://github.com/chantzish/dewebsockify/issues"
+  },
+  "homepage": "https://github.com/chantzish/dewebsockify#readme",
   "dependencies": {
-    "ws": "^0.4.32"
+    "ws": "^7.2.1"
   }
 }
